src/app/components/admin/admin-container/admin-container.component.scss
// Copyright 2022 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the
// project root for license information.

@use "@angular/material" as mat;
@include mat.elevation-classes();
@include mat.app-background();

.appitems-container .mat-list-item {
  height: auto;
}

.appslist {
  margin-top: 10px;
  margin-bottom: 20px;
}

.mat-list-item-icon {
  color: var(--mat-sys-primary) !important;
}

.nolink {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

.appcontent-container {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  ::ng-deep .mat-sidenav-content {
    overflow: hidden;
  }
}

.appbarmenu-container {
  width: 250px;
  border-right: solid var(--mat-sys-surface-container);
}

.sidenav-header {
  height: 40px;
  border-bottom: 2px solid var(--mat-sys-surface-container);
}

.pull-right {
  position: absolute;
  right: 0px;
  margin-top: -8px;
}

.showhand {
  cursor: pointer;
}

.crucible-icon-blueprint {
  color: var(--mat-sys-primary);
}

#wrapper {
  display: flex;
  flex-direction: row;
  width: 100%;
}

#rightcontext {
  width: 30px;
  font-size: 75%;
}

#content {
  text-align: left;
  vertical-align: middle;
  width: 160px;
  font-size: 90%;
  padding: 0.5em;
}

.crucible-logo {
  position: absolute;
  bottom: 0;
}

.app-versions {
  width: 100%;
  position: absolute;
  bottom: 0;
  padding-bottom: 5px;
  padding-top: 5px;
  text-align: center;
  font-size: x-small;
  border-bottom: 2px;
  border-bottom-style: solid;
  border-top: 2px;
  border-top-style: solid;
  border-color: var(--mat-sys-surface-container);
  font-weight: 400;
}

.icon-text {
  margin-left: 10px;
  font-weight: bold;
}

.selected-item {
  background-color: var(--mat-sys-surface-container);
  cursor: pointer;
}

.non-selected-item {
  background-color: var(--mat-sys-background);
  cursor: pointer;
}

